businessdate-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: businessdate-svc
  labels:
    app: businessdate
spec:
  ports:
  - port: 80
    name: http
    targetPort: web-port
  selector:
    app: businessdate
